[tool.poetry]
name = "divideandscan"
version = "0.2.6"
description = "Divide full port scan results and use it for targeted Nmap runs"
authors = ["Sam Freeside <snovvcrash@protonmail.ch>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/snovvcrash/DivideAndScan"
repository = "https://github.com/snovvcrash/DivideAndScan"
keywords = ["pentest", "scan", "nmap", "masscan", "rustscan"]
classifiers = [
	"Topic :: Security",
	"Programming Language :: Python :: 3",
	"Environment :: Console",
	"License :: OSI Approved :: BSD License"
]
packages = [
	{ include = "das" }
]
exclude = [".gitignore"]

[tool.poetry.scripts]
das = 'das.divideandscan:main'
divideandscan = 'das.divideandscan:main'

[tool.poetry.dependencies]
python = "^3.9"
tinydb = "^4.6.1"
netaddr = "^0.8.0"
defusedxml = "^0.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.12.2"
twine = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
